# libraryManagement

./: README.md
bookyad/: CMakeLists.txt  bookform.cpp  bookform.h  bookform.ui  borrowerform.cpp  borrowerform.h  borrowerform.ui  dialogbio.cpp  dialogbio.h  dialogbio.ui  dialogdeletebook.cpp  dialogdeletebook.h  dialogdeletebook.ui  dialogdeletemember.cpp  dialogdeletemember.h  dialogdeletemember.ui  dialogdeletestaff.cpp  dialogdeletestaff.h  dialogdeletestaff.ui  dialogeditbook.cpp  dialogeditbook.h  dialogeditbook.ui  dialogeditmember.cpp  dialogeditmember.h  dialogeditmember.ui  dialogeditstaff.cpp  dialogeditstaff.h  dialogeditstaff.ui  dialoginsertbook.cpp  dialoginsertbook.h  dialoginsertbook.ui  dialoginsertmember.cpp  dialoginsertmember.h  dialoginsertmember.ui  dialoginsertstaff.cpp  dialoginsertstaff.h  dialoginsertstaff.ui  icons.qrc  loginwindow.cpp  loginwindow.h  (+13 more)
bookyad/database/: bookYad.db  bookYad.sqbpro  inner join query for borrower table.sql
bookyad/icons/: biologo.xcf  loginlogo.xcf
build-bookyad-Desktop-Debug/: .ninja_deps  .ninja_log  .ninja_log.restat  CMakeCache.txt  CMakeCache.txt.prev  bookYad.db  build.ninja  cmake_install.cmake
build-bookyad-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-6a9c2f1a2bcc240b8611.json  cmakeFiles-v1-e961201cbcdb34c088b2.json  codemodel-v2-04e762844e2d98ebd413.json  codemodel-v2-a722092de08112c849a5.json  codemodel-v2-e6dc799124d4a465fe23.json  directory-.-Debug-89f6cf3b65a41e1c3052.json  index-2023-12-10T15-13-05-0045.json  index-2024-01-28T11-32-41-0217.json  index-2024-02-27T13-43-14-0138.json  target-bookyad-Debug-bd8620b431dad4792f67.json  (+2 more)
build-bookyad-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-bookyad-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-bookyad-Desktop-Debug/bookyad_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-bookyad-Desktop-Debug/bookyad_autogen/EWIEGA46WW/: moc_bookform.cpp  moc_bookform.cpp.d  moc_borrowerform.cpp  moc_borrowerform.cpp.d  moc_dialogbio.cpp  moc_dialogbio.cpp.d  moc_dialogdeletebook.cpp  moc_dialogdeletebook.cpp.d  moc_dialogdeletemember.cpp  moc_dialogdeletemember.cpp.d  moc_dialogdeletestaff.cpp  moc_dialogdeletestaff.cpp.d  moc_dialogeditbook.cpp  moc_dialogeditbook.cpp.d  moc_dialogeditmember.cpp  moc_dialogeditmember.cpp.d  moc_dialogeditstaff.cpp  moc_dialogeditstaff.cpp.d  moc_dialoginsertbook.cpp  moc_dialoginsertbook.cpp.d  moc_dialoginsertmember.cpp  moc_dialoginsertmember.cpp.d  moc_dialoginsertstaff.cpp  moc_dialoginsertstaff.cpp.d  moc_loginwindow.cpp  moc_loginwindow.cpp.d  moc_mainform.cpp  moc_mainform.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_memberform.cpp  moc_memberform.cpp.d  moc_staffform.cpp  moc_staffform.cpp.d  qrc_icons.cpp
build-bookyad-Desktop-Debug/bookyad_autogen/include/: ui_bookform.h  ui_borrowerform.h  ui_dialogbio.h  ui_dialogdeletebook.h  ui_dialogdeletemember.h  ui_dialogdeletestaff.h  ui_dialogeditbook.h  ui_dialogeditmember.h  ui_dialogeditstaff.h  ui_dialoginsertbook.h  ui_dialoginsertmember.h  ui_dialoginsertstaff.h  ui_loginwindow.h  ui_mainform.h  ui_memberform.h  ui_signupwindow.h  ui_staffform.h
(+148 files in other folders)
